# mersh_server

./: .gitignore  Cargo.toml  package.json
assets/: .gitignore  notebook_json.json  react_rust_notes.txt
src/: form.html  interpreter.rs  lib.rs  main.rs
src/front/: index.html  index.js
tests/: interpreter.rs
